// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`setup-agents parity (FILE-SPLIT-08) > public API surface > exports the expected named symbols 1`] = `
"[
  "resolveAgentModel",
  "setupAgents",
  "setupSingleAgent"
]"
`;

exports[`setup-agents parity (FILE-SPLIT-08) > resolveAgentModel behavior matrix > resolveAgentModel: returns explicit per-agent provider and model when neither is the default sentinel 1`] = `
"{
  "model": "claude-sonnet-4-20250514",
  "provider": "anthropic"
}"
`;

exports[`setup-agents parity (FILE-SPLIT-08) > resolveAgentModel behavior matrix > resolveAgentModel: returns models.defaultModel when agent model is default and YAML default is set 1`] = `
"{
  "model": "claude-opus-4-20250115",
  "provider": "anthropic"
}"
`;

exports[`setup-agents parity (FILE-SPLIT-08) > resolveAgentModel behavior matrix > resolveAgentModel: returns models.defaultProvider when agent provider is default and YAML default is set 1`] = `
"{
  "model": "claude-sonnet-4-20250514",
  "provider": "anthropic"
}"
`;

exports[`setup-agents parity (FILE-SPLIT-08) > type-level interface witnesses > AgentsResult: interface key set is stable 1`] = `
"[
  "budgetGuards",
  "costTrackers",
  "defaultAgentId",
  "defaultWorkspaceDir",
  "executors",
  "getExecutor",
  "lockCleanupTimer",
  "oauthCredentialStore",
  "piSessionAdapters",
  "providerHealth",
  "sessionManager",
  "singleAgentDeps",
  "skillRegistries",
  "skillWatcherHandles",
  "stepCounters",
  "toolCapabilityPorts",
  "workspaceDirs"
]"
`;

exports[`setup-agents parity (FILE-SPLIT-08) > type-level interface witnesses > SingleAgentDeps: interface key set is stable 1`] = `
"[
  "activeRunRegistry",
  "agentLogger",
  "autonomousMediaEnabled",
  "backgroundTaskManager",
  "canaryFallbackSecret",
  "clock",
  "container",
  "contextStore",
  "daemonTracingDefaults",
  "db",
  "deliveryMirror",
  "deliveryMirrorConfig",
  "embeddingPort",
  "embeddingQueue",
  "env",
  "fileLock",
  "geminiCacheManager",
  "getChannelMaxChars",
  "injectionRateLimiter",
  "lastKnownModel",
  "mcpClientManager",
  "mcpToolsInherited",
  "memoryAdapter",
  "oauthCredentialStore",
  "outboundMediaEnabled",
  "providerHealth",
  "resolvedAgentDir",
  "secretsCrypto",
  "secretsDb",
  "sessionStore",
  "subAgentToolNames",
  "timers"
]"
`;

exports[`setup-agents parity (FILE-SPLIT-08) > type-level interface witnesses > SingleAgentResult: interface key set is stable 1`] = `
"[
  "budgetGuard",
  "costTracker",
  "executor",
  "piSessionAdapter",
  "skillRegistry",
  "skillWatcherHandle",
  "stepCounter",
  "toolCapabilityPort",
  "workspaceDir"
]"
`;
